# apt-fetcher

./: Cargo.toml
examples/: apt-update.rs  example.rs  release_upgrader.rs
src/: apt_uris.rs  decompressor.rs  keyring.rs  lib.rs  main.rs  status.rs  upgrade.rs  uris.rs
