[package]
name = "apt-fetcher-preview"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Library for fetching dist and pool files from apt repos"
license = "MIT"
readme = "README"
edition = "2018"

[dependencies]
anyhow = "1"
async-fetcher = { git = "https://github.com/pop-os/async-fetcher" }
async-std = "1"
clap = "2"
futures = "0.3"
log = "0.4"
os_pipe = "0.9"
pidfd = "0.2"
thiserror = "1"
http-client = { git = "https://github.com/mmstick/http-client" }
surf = { git = "https://github.com/mmstick/surf" }
