[package]
name = "apt-fetcher"
version = "0.1.0"
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
description = "Library for fetching dist and pool files from apt repos"
license = "MIT"
readme = "README"

[dependencies]
apt-keyring = { git = "https://github.com/pop-os/apt-keyring" }
apt-release-file = { git = "https://github.com/pop-os/apt-release-file" }
# apt-sources-lists = { path = "../apt-sources-lists" }
apt-sources-lists = { git = "https://github.com/pop-os/apt-sources-lists" }
async-fetcher = { git = "https://github.com/pop-os/async-fetcher", rev = "6b6073848ad10400efd512187e60c478d74437e8" }
deb-architectures = "0.1.0"
failure = "0.1"
failure_derive = "0.1"
filetime = "0.2"
flate2 = "1"
futures = "0.1.25"
gpgrv = "0.2"
log = "0.4"
lz4 = "1"
md-5 = "0.8.0"
reqwest = "0.9"
sha-1 = "0.8"
sha2 = "0.8"
tempfile = "3"
tempfile-fast = "0.3"
tokio = "0.1"
xz2 = "0.1"
tokio-threadpool = "0.1"
err-derive = "0.2"

[dev-dependencies]
reqwest = "0.9.4"
clap = "2"
log = "0.4"
